--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# ignore keys.yaml because contains sensitive information such as tokens and keys
+keys.yaml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
